--- a/index.html
+++ b/index.html
@@ -53,12 +53,21 @@
                     <h2>Login</h2>
                     <form action="#">
                         <div class="input-box">
+                            <div class="icon">
+                                <ion-icon name="person-outline"></ion-icon>
+                            </div>
                             <input type="text" required placeholder="Username">
                         </div>
                         <div class="input-box">
+                            <div class="icon">
+                                <ion-icon name="mail-outline"></ion-icon>
+                            </div>
                             <input type="email" required placeholder="Email">
                         </div>
                         <div class="input-box">
+                            <div class="icon">
+                                <ion-icon name="lock-closed-outline"></ion-icon>
+                            </div>
                             <input type="password" required placeholder="Password">
                         </div>
             
@@ -77,18 +86,33 @@
                     <h2>Registeration</h2>
                     <form action="#">
                         <div class="input-box">
+                            <div class="icon">
+                                <ion-icon name="person-outline"></ion-icon>
+                            </div>
                             <input type="text" required placeholder="First name">
                         </div>
                         <div class="input-box">
+                            <div class="icon">
+                                <ion-icon name="person-outline"></ion-icon>
+                            </div>
                             <input type="text" required placeholder="Last name">
                         </div>
                         <div class="input-box">
+                            <div class="icon">
+                                <ion-icon name="globe-outline"></ion-icon>
+                            </div>
                             <input type="text" required placeholder="Country">
                         </div>
                         <div class="input-box">
+                            <div class="icon">
+                                <ion-icon name="mail-outline"></ion-icon>
+                            </div>
                             <input type="email" required placeholder="Email">
                         </div>
                         <div class="input-box">
+                            <div class="icon">
+                                <ion-icon name="lock-closed-outline"></ion-icon>
+                            </div>
                             <input type="password" required placeholder="Password">
                         </div>
                         <div class="button">
