added some hover and icon

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </div>
                         <div class="button">
                             <button type="submit" class="btn-login">Login</button>
-                            <button type="submit" class="google">Sign with google</button>
+                            <button type="submit" class="google"><ion-icon name="logo-google"></ion-icon> Sign with google</button>
                         </div>
                     </form>
                 </div>
