--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="script.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -27,6 +30,25 @@
                 <button class="sign-up">Sign Up</button>
             </div>
         </header>
+
+        <div class="intro">
+            <div class="text">
+                <h2>Hey every body 👋
+                    <br> how can i help you</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    <br> Officia, facilis repellat porro omnis obcaecati accusamus.</p>
+                    <button class="self-btn">Get Started</button>
+            </div>
+        </div>
+
+        <div class="image-right">
+            <div class="image">
+                <div class="h2">
+                    <h2>Html Css & javascript</h2>
+                </div>
+                <img src="img/person.png">
+            </div>
+        </div>
 
 
         <div class="wrapper">
