--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <div class="form-box login">
                     <h2>Login</h2>
-                    <form action="#">
+                    <form action="inter.html">
                         <div class="input-box">
                             <div class="icon">
                                 <ion-icon name="person-outline"></ion-icon>
@@ -106,7 +106,7 @@
 
                 <div class="form-box register">
                     <h2>Registeration</h2>
-                    <form action="#">
+                    <form action="inter.html">
                         <div class="input-box">
                             <div class="icon">
                                 <ion-icon name="person-outline"></ion-icon>
